--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,9 +5,9 @@
     <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ .Site.Params.description }}{{ end }}">
     <meta name="author" content="{{ .Site.Params.AuthorName }}">
     <!-- Favicon details -->
-    <link rel="apple-touch-icon" sizes="180x180" href={{ "apple-touch-icon.png" | absURL }}>
-    <link rel="icon" type="image/png" sizes="32x32" href={{ "favicon-32x32.png" | absURL }}>
-    <link rel="icon" type="image/png" sizes="16x16" href={{ "favicon-16x16.png" | absURL }}>
+    <link rel="apple-touch-icon" sizes="180x180" href={{ .Site.Params.SiteLogo | absURL }}>
+    <link rel="icon" type="image/png" sizes="32x32" href={{ .Site.Params.SiteLogo | absURL }}>
+    <link rel="icon" type="image/png" sizes="16x16" href={{ .Site.Params.SiteLogo" | absURL }}>
     <link rel="manifest" href={{ "site.webmanifest" | absURL }}>
     <link rel="mask-icon" href={{ "safari-pinned-tab.svg" | absURL }} color="#00416a">
     <meta name="msapplication-TileColor" content="#00aba9">
