--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,7 @@
     <!-- Favicon details -->
     <link rel="apple-touch-icon" sizes="180x180" href={{ .Site.Params.SiteLogo | absURL }}>
     <link rel="icon" type="image/png" sizes="32x32" href={{ .Site.Params.SiteLogo | absURL }}>
-    <link rel="icon" type="image/png" sizes="16x16" href={{ .Site.Params.SiteLogo" | absURL }}>
+    <link rel="icon" type="image/png" sizes="16x16" href={{ .Site.Params.SiteLogo | absURL }}>
     <link rel="manifest" href={{ "site.webmanifest" | absURL }}>
     <link rel="mask-icon" href={{ "safari-pinned-tab.svg" | absURL }} color="#00416a">
     <meta name="msapplication-TileColor" content="#00aba9">
